Add function to delete map systems.
Add 500ms sleep before redrawing map when adding or removing a system to
prevent drawing errors.

--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -32,8 +32,8 @@
                 Delete
             </a>
             <ul class="dropdown-menu" role="menu">
-                <li><a onclick="DeleteSystem({{mapsys.pk}};")>I'm sure!</a></li>
-                <li><a onclick="DeleteSystem({{mapsys.pk}};")>Just Kidding!</a></li>
+                <li><a onclick="DeleteSystem({{mapsys.pk}});")>I'm sure!</a></li>
+                <li><a class="dropdown-toggle" data-toggle="dropdown")>Just Kidding!</a></li>
             </ul>
         </div>
         <a class="btn" onclick="CloseSystemMenu();">Close Menu</a>
