--- a/evewspace/Map/templates/system_signatures.html
+++ b/evewspace/Map/templates/system_signatures.html
@@ -1,29 +1,30 @@
-<div id="sys{{system.pk}}Sigs" class="sysSigsDiv">
     <ul class="sysSigsList">
-        {% for sig in system.signatures %}
+        {% for sig in system.system.signatures.all %}
             <li class="sysSigsEntry">
-            <i class="icon-pencil" title="Edit" onclick="EditSignature({{signature.pk}}, {{system.pk}});"></i> &nbsp
-            <i class="icon-ban-circle" title="Delete" onclick="RemoveSignature({{signature.pk}}, {{system.pk}});"</i> &nbsp
+            <i class="icon-pencil" title="Edit" onclick="EditSignature({{sig.pk}}, {{system.pk}});"></i> &nbsp
+            <i class="icon-ban-circle" title="Delete" onclick="RemoveSignature({{sig.pk}}, {{system.pk}});"></i> &nbsp
             {% if sig.updated %}
                 <i class="icon-ok-sign" title="Signature Updated"></i> &nbsp
             {% else %}
                 <i class="icon-remove-sign" title="Signature Not Updated"></i> &nbsp
             {% endif %}
             <span class="signatureID">{{sig.sigid}}</span> &nbsp
-            <span class="signatureType" onclick="GetSiteSpawns({{sig.system.sysclass}}, {{sig.sigtype.pk}});">{{sig.sigtype.shortname}}</span> &nbsp
+            <span class="signatureType" onclick="GetSiteSpawns({{sig.system.sysclass}}, {{sig.sigtype.pk}});" title="{{sig.sigtype.longname}}">{{sig.sigtype.shortname}}</span> &nbsp
             <span class="signatureInfo">{{sig.info}}</span>
-            {% if sig.sigtype.sleepersite and not sig.ratscleared %}
+            {% if sig.sigtype.sleeprsite and not sig.ratscleared %}
                 <i class="icon-warning-sign" title="Sleepers not cleared!"></i> &nbsp
-            {% else %}
+            {% elif sig.sigtype.sleeprsite %}
                 <i class="icon-screenshot" title="Sleepers cleared at {{sig.ratscleared|date:'Y-m-d H:i'}}"></i> &nbsp
             {% endif %}
-            {% if sig.sigtype.escalatable and sig.lastescalated < escalationThreshold %}
-                {% if sig.downtimes = 2 %}
-                    <i class="icon-fire" title="Site will despawn at DT."></i>
-                {% else %}
-                    <i class="icon-fullscreen" title="Clear escalation only."></i>
+            {% if sig.sigtype.escalatable %}
+                {% if sig.lastescalated < escalationThreshold or not sig.lastescalated %}
+                    {% if sig.downtimes = 2 %}
+                        <i class="icon-fire" title="Site will despawn at DT."></i>
+                    {% else %}
+                        <i class="icon-fullscreen" title="Clear escalation only."></i>
+                    {% endif %}        
                 {% endif %}
-            {% elif sig.sigtype.escalatable %}
+            {% elif sig.sigtype.escalatable and sig.lastescated > escalationThreshold %}
                 <i class="icon-ok" title="Site escalated today."></i>
             {% endif %}
             </li>
@@ -31,4 +32,3 @@
             <li class="sysSigsEntry">No Signatures!</li>
         {% endfor%}
     </ul>
-</div>
