Finished core signature actions.
Add signature deletion.
Add signature escalation tracking.
Add signature npc clear tracking.
TODO: Add signature activation indicator.
fixes #27

--- a/evewspace/Map/templates/system_signatures.html
+++ b/evewspace/Map/templates/system_signatures.html
@@ -1,8 +1,9 @@
     <ul class="sysSigsList">
+        {{escalationThreshold}}
         {% for sig in system.system.signatures.all %}
             <li class="sysSigsEntry">
             <i class="icon-pencil" title="Edit" onclick="EditSignature({{sig.pk}}, {{system.pk}});"></i> &nbsp
-            <i class="icon-ban-circle" title="Delete" onclick="RemoveSignature({{sig.pk}}, {{system.pk}});"></i> &nbsp
+            <i class="icon-ban-circle" title="Delete" onclick="DeleteSignature({{sig.pk}}, {{system.pk}});"></i> &nbsp
             {% if sig.updated %}
                 <i class="icon-ok-sign" title="Signature Updated"></i> &nbsp
             {% else %}
@@ -12,20 +13,20 @@
             <span class="signatureType" onclick="GetSiteSpawns({{sig.system.sysclass}}, {{sig.sigtype.pk}});" title="{{sig.sigtype.longname}}">{{sig.sigtype.shortname}}</span> &nbsp
             <span class="signatureInfo">{{sig.info}}</span>
             {% if sig.sigtype.sleeprsite and not sig.ratscleared %}
-                <i class="icon-warning-sign" title="Sleepers not cleared!"></i> &nbsp
+            <i class="icon-warning-sign" onclick="MarkCleared({{sig.pk}}, {{system.pk}});" title="NPCs not cleared!"></i> &nbsp
             {% elif sig.sigtype.sleeprsite %}
-                <i class="icon-screenshot" title="Sleepers cleared at {{sig.ratscleared|date:'Y-m-d H:i'}}"></i> &nbsp
+                <i class="icon-screenshot" title="NPCs cleared at {{sig.ratscleared|date:'Y-m-d H:i'}}"></i> &nbsp
             {% endif %}
-            {% if sig.sigtype.escalatable %}
+            {% if sig.sigtype.escalatable and sig.system.sysclass > 4 and sig.system.sysclass < 7 %}
                 {% if sig.lastescalated < escalationThreshold or not sig.lastescalated %}
                     {% if sig.downtimes = 2 %}
-                        <i class="icon-fire" title="Site will despawn at DT."></i>
+                    <i class="icon-fire" onlick="MarkEscalated({{sig.pk}}, {{system.pk}});" title="Site will despawn at DT."></i>
                     {% else %}
-                        <i class="icon-fullscreen" title="Clear escalation only."></i>
+                    <i class="icon-fullscreen" onclick="MarkEscalated({{sig.pk}}, {{system.pk}});" title="Clear escalation only."></i>
                     {% endif %}        
-                {% endif %}
-            {% elif sig.sigtype.escalatable and sig.lastescated > escalationThreshold %}
-                <i class="icon-ok" title="Site escalated today."></i>
+                {% else %}    
+                    <i class="icon-ok" title="Site escalated today."></i>
+                {% endif %}    
             {% endif %}
             </li>
         {% empty %}
