Add detail to system and wormhole tooltips.

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -53,6 +53,10 @@
 {
     text-align: left;
 }
+.sysFriendlySpan
+{
+    text-align: center;
+}
 .tip {
   background: #eee;
   border: 1px solid #ccc;
