--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -1,5 +1,6 @@
 <div class="mapSysInfo">
-    <div class="sysClassSpan">
+         <h4 class="sysFriendlySpan">{{mapsys.friendlyname}}</h4>
+   <div class="sysClassSpan">
         {% if system.sysclass < 7 %}
         <div> 
             <strong>Class: {{system.sysclass}}</strong>
@@ -11,6 +12,7 @@
             <strong>Probable Statics: {{system.static1}} {% if system.static2 %}{{system.static2}} {% endif %}</strong>
         </div>
         {% endif %}
+        <strong>
         {% if system.sysclass = 7 %}
         High Sec
         {% endif %}
@@ -20,6 +22,7 @@
         {% if system.sysclass = 9 %}
         Null Sec
         {% endif %}
+    </strong>
     </div>
     <br />
     <span class="sysLastScanned label {% if scanwarning  %} label-warning {% endif %}">
@@ -27,12 +30,12 @@
     </span> 
     <br />
     <br />
-    <p class="statusText label label-success">POS: {{system.poses.count}} Pilots: {{system.activepilots.count}}</p>
+    <p class="statusText label label-success">SIG: {{system.signatures.count}} POS: {{system.poses.count}} Pilots: {{system.activepilots.count}}</p>
     {% if system.occupied %}
     <p class="occupiedTooltip label label-important"> Occupied: <br /> {{system.occupied|safe}}</p>
     {% endif %}
     {% if system.info %}
     <p class="infoTooltip label label-info"> Info: <br /> {{system.info|safe}} </p>
     {% endif %}
-    <p class="statsText label label-inverse"> NPC: {{system.npckills}} Ship: {{system.shipkills}} Pod: {{system.podkills}}{% if system.sysclass > 6 %} Jumps: {{specialsys.jumps}} {% endif %}</p> 
+    <p class="statsText label label-inverse"> NPC: {{system.npckills}} Ship: {{system.shipkills}} Pod: {{system.podkills}}{% if system.sysclass > 6 %} Jumps: {{system.jumps}} {% endif %}</p> 
 </div>
