--- a/evewspace/Map/templates/log_div.html
+++ b/evewspace/Map/templates/log_div.html
@@ -1,7 +1,7 @@
 <div id="logDiv" class="logDiv">
     <ul id="logList" class="logList">
         {% for log in logs %}
-        <li class="logEntry">{{log}}</li>
+        <li class="logEntry">{{log|safe}}</li>
         {% endfor %}
     </ul>
 </div>
