Improve WH type displays.
Implement WormholeType dest_string method.
Add django.contrib.humanize.
Add commas to WH masses.
Add destinations to WH Types.

--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -9,7 +9,8 @@
             <strong>Effect: {{system.effect}}</strong>
         </div>
         <div>
-            <strong>Probable Statics: {{system.static1}} {% if system.static2 %}{{system.static2}} {% endif %}</strong>
+            <strong>Probable Statics: <br />
+                {{system.static1}} ({{system.static1.dest_string}}) &nbsp {% if system.static2 %}{{system.static2}} ({{system.static2.dest_string}}){% endif %}</strong>
         </div>
         {% endif %}
         <strong>
