--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <div id="sysPanelHeader" class="systemPanelHeader row">
     <div class="span6 page-header well well-large">
     <div class="dropdown">
@@ -26,12 +27,12 @@
         </div>
         <div class="span2">
             <strong>Probable Statics: 
-                <span title="Time: {{system.static1.lifetime}}H &nbsp Mass: {{system.static1.maxmass}}kg &nbsp Jump Mass: {{system.static1.jumpmass}}kg">
-                    {{system.static1}}
+                <span title="Time: {{system.static1.lifetime}}H &nbsp Mass: {{system.static1.maxmass|intcomma}}kg &nbsp Jump Mass: {{system.static1.jumpmass|intcomma}}kg">
+                    {{system.static1}} ({{system.static1.dest_string}})
             </span> 
             {% if system.static2 %}
-            <span title="Time: {{system.static2.lifetime}}H &nbsp Mass: {{system.static2.maxmass}}kg &nbsp Jump Mass: {{system.static2.jumpmass}}">
-                {{system.static2}} 
+            <span title="Time: {{system.static2.lifetime}}H &nbsp Mass: {{system.static2.maxmass|intcomma}}kg &nbsp Jump Mass: {{system.static2.jumpmass|intcomma}}">
+                {{system.static2}} ({{system.static2.dest_string}})
             </span>
             {% endif %}</strong>
         </div>
