--- a/evewspace/Map/templates/edit_sig_form.html
+++ b/evewspace/Map/templates/edit_sig_form.html
@@ -1,5 +1,5 @@
 <div id="sys{{system.pk}}SigAddForm" class="sigAddFormDiv">
-    <form id="sigAddForm" class="form-inline" action="system/signatures/add" method="post">
+    <form id="sigEditForm" class="form-inline" action="system/signatures/add" method="post">
         {% csrf_token %}
         {% for field in form %}
             {% if field.errors %}
@@ -7,12 +7,12 @@
             {% endif %}
             {{field.label_tag}} {{field}} &nbsp
         {% endfor %}
-        <input type="submit" value="Add Sig" />
+        <input type="submit" value="Save Sig" />
     </form>
     <script type="text/javascript">
-        $("#sigAddForm").submit(function(e){
+        $("#sigEditForm").submit(function(e){
                     e.preventDefault();
-                    AddSignature({{system.pk}});
+                    EditSignature({{system.pk}}, {{sig.pk}});
                     return false;
                 });
     </script>
