--- a/evewspace/POS/templates/poslist.html
+++ b/evewspace/POS/templates/poslist.html
@@ -1,6 +1,6 @@
-{% load posdetails %}
+{% load poslist %}
 <ul>
 {% for p in poses %}
-	{% posdetails p %}
+	{% posdetails system p %}
 {% endfor %}
 </ul>	
