--- a/evewspace/POS/templates/posdetails_small.html
+++ b/evewspace/POS/templates/posdetails_small.html
@@ -1,18 +1,43 @@
-<li id="pos{{pos.pk}}" class="poslistitem">
-	<div class="poslist_header" style="position:relative">
-		<span class="planetlabel">Planet </span>
-		<span class="planetno">{{pos.planet}}</span>
-		<span class="moonlabel">Moon </span>
-		<span class="moonno">{{pos.moon}}</span>
-		<span class="possize">{{pos.size[0]}}</span>
-		<span class="buttons"><!--button images go here --></span>
+<li id="pos{{pos.pk}}" class="posListItem">
+<div class="poslist_header" data-toggle="collapse" data-target="#pos{{pos.pk}}Details" style="position:relative">
+        <img height="64" width="64" src="http://image.eveonline.com/Render/{{pos.towertype.pk}}_128.png"></img>
+        <span class="planetlabel">Planet: </span>
+        <span class="planetno"><strong>{{pos.planet}}</strong></span>
+		<span class="moonlabel">Moon: </span>
+        <span class="moonno"><strong>{{pos.moon}}<strong></span>&nbsp
+        <span class="postype"><strong>{{pos.towertype.name}}</strong></span>&nbsp &nbsp
+        <i class="icon-pencil" onclick="EditStarbase({{system.pk}}, {{pos.pk}});" title="Edit POS"></i>
+        <br />
+        {% if pos.guns %}
+        <img height="32" width="32" title="GUNS" src="/static/images/posguns.png" /> {{pos.guns}}
+        {% endif %}
+        {% if pos.ewar %}
+        <img height="32" width="32" title="EWAR" src="/static/images/posewar.png" /> {{pos.ewar}}
+        {% endif %}
+        {% if pos.sma %}
+        <img height="32" width="32" title="SMA" src="/static/images/possma.png" /> {{pos.sma}}
+        {% endif %}
+        {% if pos.warpin_notice %}
+        <br />
+        <span title="Warp-in Notice" class="label label-warning">{{pos.warpin_notice}}</span>
+        {% endif %}
 	</div>
-	<div class="poslist_main">
-		<span class="poslist_icon"><!-- add image here --></span>
-		<div class"poslist_info">
-			<a href="http://eve-kill.net/?a=corp_detail&crp_id={{pos.corporation.id}}" class="killboard_link">{{pos.corporation.name}}</a>
-			<span class="poslist_ticker">[{pos.corporation.ticker}}]</span><br />
-			<span class="poslist_posname">{{pos.posname}}</span>
+    <div id="pos{{pos.pk}}Details" class="poslist_main collapse">
+        <div class"poslist_info">
+            <h5>Owner: </h5>
+            <img src="http://image.eveonline.com/Corporation/{{pos.corporation.id}}_32.png" ></img> &nbsp
+            {% if pos.corporation.alliance %}
+            <img src="http://image.eveonline.com/Alliance/{{pos.corporation.alliance.id}}_32.png"></img><br />
+            {% endif %}
+            <span class="poslist_corplabel">Corp: </span>
+			<a href="http://www.zkillboard.com/corporation/{{pos.corporation.id}}/" target="_blank" class="killboard_link">{{pos.corporation.name}}</a>
+            <span class="poslist_ticker">[{{pos.corporation.ticker}}]</span><br />
+            <span class="poslist_alliancelable">Alliance: </span>
+            <a href="http://www.zkillboard.com/alliance/{{pos.corporation.alliance.id}}/" target="_blank" class="killboard_link">{{pos.corporation.alliance.name}}</a>
+            <span class="poslist_ticker">[{{pos.corporation.alliance.shortname}}]</span><br />
+            <span class="poslist_posname">Name: {{pos.posname}}</span> <br />
+            <h5>Full Fitting: </h5>
+            <span class="poslist_fitting">{{pos.fitting}}</span> <br />
 		</div>
 	</div>
 </li>
