Convert line breaks to and from \n for info and occupied.

--- a/evewspace/Map/templates/edit_system.html
+++ b/evewspace/Map/templates/edit_system.html
@@ -4,9 +4,9 @@
         <h4>Friendly Name:</h4> 
         <input type="text" id="friendlyField" name="friendlyName" value="{{mapsys.friendlyname}}">
         <h4>Info: </h4>
-        <textarea name="info" id="infoField" rows=8 cols=50>{{mapsys.system.info}}</textarea> 
+        <textarea name="info" id="infoField" rows=8 cols=50>{{info}}</textarea> 
         <h4>Occupied: </h4>
-        <textarea name="occupied" id="occupiedField" rows=8 cols=50 >{{mapsys.system.occupied}}</textarea><br />
+        <textarea name="occupied" id="occupiedField" rows=8 cols=50 >{{occupied}}</textarea><br />
         <br />
         <input type="submit" value="Save Info">
     </form>
