Implemented new Active Pilot system. POS list.
New Active Pilot system that keeps track of chars and ships.
POS list now shows hardeners.
Replaced django-eveigb in requirements with our own fork due to out of
date headers in upstream.

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -57,6 +57,11 @@
 {
     margin-left: 25px;
 }
+.posSummary
+{
+    margin-left: 60px;
+    margin-top: -10px;
+}
 .sigAddFormDiv
 {
     text-align: left;
