Implement celery for asyc tasks.
New Requirement: Celery
New Requirement: AMQP (RabbitMQ)
Implemented scheduled async tasks for updating system stats and sov.
Implemented scheduled async task for updating alliance and corp data.
Implemented async task for updating single corps and alliances.
Changed PvP icon.
Added core model for Faction used for sov updating.

--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -46,6 +46,10 @@
         {% if system.sysclass = 9 %}
         Null Sec
         {% endif %}
+        {% if system.sov %}
+        <br />
+        Sov: {{system.sov}}
+        {% endif %}
     </div>
     <br />
 <div>
