--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">var ajax_image = "<img src= '{{STATIC_URL}}images/loading.gif'></img>"; </script>
 {% endblock %}
 {% block contentheader %}
-<input type="button" class="button" value="Refresh" onclick="RefreshMap();" />
+<img title="Refresh Map" height=32 width=32 src={{STATIC_URL}}images/reload.png onclick="RefreshMap();" />
 <div id="mapDiv" class="mapDiv">
 
 </div>
