--- a/evewspace/POS/templates/posdetails_small.html
+++ b/evewspace/POS/templates/posdetails_small.html
@@ -34,14 +34,17 @@
             <h5>Owner: </h5>
             <img src="http://image.eveonline.com/Corporation/{{pos.corporation.id}}_32.png" ></img> &nbsp
             {% if pos.corporation.alliance %}
-            <img src="http://image.eveonline.com/Alliance/{{pos.corporation.alliance.id}}_32.png"></img><br />
+            <img src="http://image.eveonline.com/Alliance/{{pos.corporation.alliance.id}}_32.png"></img>
             {% endif %}
+            <br />
             <span class="poslist_corplabel">Corp: </span>
 			<a href="http://www.zkillboard.com/corporation/{{pos.corporation.id}}/" target="_blank" class="killboard_link">{{pos.corporation.name}}</a>
             <span class="poslist_ticker">[{{pos.corporation.ticker}}]</span><br />
+            {% if pos.corporation.alliance %}
             <span class="poslist_alliancelable">Alliance: </span>
             <a href="http://www.zkillboard.com/alliance/{{pos.corporation.alliance.id}}/" target="_blank" class="killboard_link">{{pos.corporation.alliance.name}}</a>
             <span class="poslist_ticker">[{{pos.corporation.alliance.shortname}}]</span><br />
+            {% endif %}
             <span class="poslist_posname">Name: {{pos.posname}}</span> <br />
             <h5>Full Fitting: </h5>
             <span class="poslist_fitting">{{pos.fitting|safe}}</span> <br />
